--- a/SecureDNSClient/SecureDNSClient.csproj
+++ b/SecureDNSClient/SecureDNSClient.csproj
@@ -8,8 +8,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <Copyright>MSasanMH</Copyright>
-    <Product>Secure DNS Client</Product>
-    <Version>$(VersionPrefix)2.0.8</Version>
+    <Product>SDC - Secure DNS Client</Product>
+    <Version>$(VersionPrefix)2.1.0</Version>
     <PackageIcon>SecureDNSClient.png</PackageIcon>
     <ApplicationIcon>SecureDNSClientMulti.ico</ApplicationIcon>
   </PropertyGroup>
@@ -67,25 +67,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Management" Version="7.0.0" />
+    <PackageReference Include="ARSoft.Tools.Net" Version="3.1.1" />
+    <PackageReference Include="DnsCrypt.Stamps" Version="0.2.2" />
+    <PackageReference Include="RestWrapper" Version="2.3.2" />
+    <PackageReference Include="System.Management" Version="8.0.0-preview.3.23174.8" />
+    <PackageReference Include="Watson" Version="3.3.0.4" />
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="Ae.Dns.AppMetrics">
-      <HintPath>Library\Ae.Dns.AppMetrics.dll</HintPath>
-    </Reference>
-    <Reference Include="Ae.Dns.Client">
-      <HintPath>Library\Ae.Dns.Client.dll</HintPath>
-    </Reference>
-    <Reference Include="Ae.Dns.Protocol">
-      <HintPath>Library\Ae.Dns.Protocol.dll</HintPath>
-    </Reference>
-    <Reference Include="Ae.Dns.Server">
-      <HintPath>Library\Ae.Dns.Server.dll</HintPath>
-    </Reference>
-    <Reference Include="Ae.Dns.Server.Http">
-      <HintPath>Library\Ae.Dns.Server.Http.dll</HintPath>
-    </Reference>
     <Reference Include="ARSoft.Tools.Net">
       <HintPath>Library\ARSoft.Tools.Net.dll</HintPath>
     </Reference>
