--- a/SecureDNSClient/SecureDNSClient.csproj
+++ b/SecureDNSClient/SecureDNSClient.csproj
@@ -9,7 +9,7 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <Copyright>MSasanMH</Copyright>
     <Product>SDC - Secure DNS Client</Product>
-    <Version>$(VersionPrefix)2.1.6</Version>
+    <Version>$(VersionPrefix)2.2.0</Version>
     <PackageIcon>SecureDNSClient.png</PackageIcon>
     <ApplicationIcon>SecureDNSClientMulti.ico</ApplicationIcon>
   </PropertyGroup>
@@ -67,6 +67,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ae.Dns.Client" Version="1.0.0" />
+    <PackageReference Include="Ae.Dns.Server" Version="1.0.0" />
     <PackageReference Include="ARSoft.Tools.Net" Version="3.3.0" />
     <PackageReference Include="DnsCrypt.Stamps" Version="0.2.2" />
     <PackageReference Include="System.Management" Version="8.0.0-preview.4.23259.5" />
