--- a/SDCProxyServer/SDCProxyServer.csproj
+++ b/SDCProxyServer/SDCProxyServer.csproj
@@ -7,7 +7,7 @@
     <Nullable>enable</Nullable>
     <ApplicationIcon>SecureDNSClientMulti.ico</ApplicationIcon>
     <Title>Msmh Multi Proxy Server</Title>
-    <Version>$(VersionPrefix)2.5.0</Version>
+    <Version>$(VersionPrefix)2.5.1</Version>
     <Copyright>MSasanMH</Copyright>
     <PackageIcon>SecureDNSClient.png</PackageIcon>
     <Description>A Multi Proxy Server.
@@ -15,6 +15,7 @@ HTTP (Domain, IPv4, IPv6) (Get, Post, etc)
 SOCKS4 (IPv4) (Connect, Bind)
 SOCKS4A (Domain, IPv4) (Connect, Bind)
 SOCKS5 (Domain, IPv4, IPv6) (Connect, Bind, UDP)</Description>
+    <Platforms>AnyCPU;x64;x86</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
