--- a/SecureDNSClient/SecureDNSClient.csproj
+++ b/SecureDNSClient/SecureDNSClient.csproj
@@ -9,12 +9,21 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <Copyright>MSasanMH</Copyright>
     <Product>SDC - Secure DNS Client</Product>
-    <Version>$(VersionPrefix)2.7.0</Version>
+    <Version>$(VersionPrefix)2.7.5</Version>
     <PackageIcon>SecureDNSClient.png</PackageIcon>
     <ApplicationIcon>SecureDNSClientMulti.ico</ApplicationIcon>
+    <Platforms>AnyCPU;x64;x86</Platforms>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <Optimize>True</Optimize>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x86'">
+    <Optimize>True</Optimize>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <Optimize>True</Optimize>
   </PropertyGroup>
 
@@ -42,10 +51,7 @@
     <EmbeddedResource Include="DNS-Servers.sdcs" />
     <EmbeddedResource Include="DNS-Servers.txt" />
     <EmbeddedResource Include="HostToCompany.txt" />
-    <EmbeddedResource Include="NecessaryFiles\dnscrypt-proxy.exe" />
     <EmbeddedResource Include="NecessaryFiles\dnscrypt-proxy.toml" />
-    <EmbeddedResource Include="NecessaryFiles\dnslookup.exe" />
-    <EmbeddedResource Include="NecessaryFiles\dnsproxy.exe" />
     <EmbeddedResource Include="NecessaryFiles\goodbyedpi.exe" />
     <EmbeddedResource Include="NecessaryFiles\versions.txt" />
     <EmbeddedResource Include="NecessaryFiles\WinDivert.dll" />
@@ -65,6 +71,7 @@
     <PackageReference Include="Ae.Dns.Server" Version="2.0.0" />
     <PackageReference Include="ARSoft.Tools.Net" Version="3.5.0" />
     <PackageReference Include="System.Management" Version="8.0.0-preview.4.23259.5" />
+    <PackageReference Include="TaskScheduler" Version="2.10.1" />
   </ItemGroup>
 
   <ItemGroup>
