--- a/SecureDNSClientPortable/SecureDNSClientPortable.csproj
+++ b/SecureDNSClientPortable/SecureDNSClientPortable.csproj
@@ -7,9 +7,10 @@
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
     <ApplicationIcon>SecureDNSClientMulti.ico</ApplicationIcon>
-    <Version>$(VersionPrefix)2.7.5</Version>
+    <Version>$(VersionPrefix)2.8.0</Version>
     <Copyright>MSasanMH</Copyright>
     <ApplicationManifest>app.manifest</ApplicationManifest>
+    <Platforms>AnyCPU;x64;x86</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
