--- a/SDCAgnosticServer/SDCAgnosticServer.csproj
+++ b/SDCAgnosticServer/SDCAgnosticServer.csproj
@@ -8,7 +8,7 @@
     <ApplicationIcon>SecureDNSClientMulti.ico</ApplicationIcon>
 	<IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
     <Title>MSMH Multi DNS And Proxy Server</Title>
-    <Version>$(VersionPrefix)3.0.0</Version>
+    <Version>$(VersionPrefix)3.0.1</Version>
     <Copyright>MSasanMH</Copyright>
     <PackageIcon>SecureDNSClient.png</PackageIcon>
     <Description>A Multi Proxy Server.
@@ -22,6 +22,7 @@ SOCKS4A (Domain, IPv4) (Connect, Bind)
 SOCKS5 (Domain, IPv4, IPv6) (Connect, Bind, UDP)</Description>
     <Platforms>AnyCPU;x64;x86</Platforms>
     <PackageProjectUrl>https://github.com/msasanmh/SecureDNSClient</PackageProjectUrl>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
 
   <ItemGroup>
