--- a/MsmhToolsClass/MsmhToolsClass.csproj
+++ b/MsmhToolsClass/MsmhToolsClass.csproj
@@ -5,7 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Platforms>AnyCPU;x64;x86</Platforms>
-    <Version>$(VersionPrefix)1.6.5</Version>
+    <Version>$(VersionPrefix)1.6.6</Version>
     <Copyright>MSasanMH</Copyright>
   </PropertyGroup>
 
@@ -190,11 +190,12 @@
 
   <ItemGroup>
     <PackageReference Include="libsodium" Version="1.0.20" />
+    <PackageReference Include="MaxMind.GeoIP2" Version="5.2.0" />
     <PackageReference Include="Microsoft.Diagnostics.Tracing.TraceEvent" Version="3.1.8" />
     <PackageReference Include="Microsoft.PowerShell.SDK" Version="7.2.18" />
     <PackageReference Include="System.Diagnostics.PerformanceCounter" Version="8.0.0" />
     <PackageReference Include="System.DirectoryServices.AccountManagement" Version="8.0.0" />
-    <PackageReference Include="System.Drawing.Common" Version="8.0.6" />
+    <PackageReference Include="System.Drawing.Common" Version="8.0.8" />
     <PackageReference Include="System.Management" Version="8.0.0" />
     <PackageReference Include="System.Management.Automation" Version="7.2.18" />
     <PackageReference Include="TaskScheduler" Version="2.11.0" />
